feat: deliver product capabilities epic (#8)
* docs(ai): add planning assistant design

Document the validated two-service architecture, bounded LangGraph workflow, contracts, persistence, safety, testing, and rollout plan.

* feat(ai): add bounded project planning graph

* feat(projects): add AI-generated project drafts

Generate quality-checked ticket plans from human prompts and persist them only after authenticated confirmation. Add behavior evals, integration coverage, and local Ollama/Compose setup.

* docs(ui): design AI project workshop

* feat(web): add project generation API client

* feat(web): add authenticated planning workspace

* feat(web): add editable project draft workflow

* feat(web): style the AI project workshop

* docs(web): document local frontend setup

* docs(projects): design project browser

* fix(projects): make project summaries readable

* feat(projects): expose project ticket details

* feat(web): add project browser API client

* feat(web): add projects and backlog browser

* feat(web): finish project browser experience

* docs(web): design execution workspace views

* feat(web): add task execution API client

* feat(web): add project execution board

* feat(web): add my work dashboard

* feat(web): add account and project desk views

* feat(web): finish execution workspace views

* docs(security): plan mandatory feature delivery

* fix(security): scope project access to owners

* fix(security): scope task access to project owners

* fix(security): enforce account roles and self service

* fix(security): keep account mutations self scoped

* fix(security): reject inactive tokens and scope counts

* docs: plan manual project and task lifecycle

* feat(projects): add manual project lifecycle

* feat(tasks): complete manual task lifecycle

* feat(web): add manual lifecycle api calls

* feat(web): add manual project controls

* feat(web): add manual ticket controls

* fix(web): align project name limits

* docs: plan personal work assign